--- a/app/src/main/res/layout/custom_layout_for_site_code.xml
+++ b/app/src/main/res/layout/custom_layout_for_site_code.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="85dp"
+    android:layout_height="95dp"
     android:background="@drawable/custom_resource_for_elevation_of_listview_normal"
     android:contextClickable="true"
     android:orientation="horizontal">
@@ -10,7 +10,7 @@
     <com.balysv.materialripple.MaterialRippleLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:mrl_rippleColor="#263238"
+        app:mrl_rippleColor="#9E9E9E"
         app:mrl_rippleOverlay="true">
 
         <LinearLayout
