--- a/app/src/main/res/layout/custom_layout_for_site_code.xml
+++ b/app/src/main/res/layout/custom_layout_for_site_code.xml
@@ -1,9 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:layout_width="match_parent"
     android:layout_height="95dp"
     android:background="@drawable/custom_resource_for_elevation_of_listview_normal"
-    android:contextClickable="true"
     android:orientation="horizontal">
 
 
@@ -11,12 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:mrl_rippleColor="#9E9E9E"
-
         app:mrl_rippleOverlay="true">
 
         <LinearLayout
+            android:id="@+id/list_item_layout_for_clicking_indicator"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:focusable="true"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -31,6 +32,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="6"
                     android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
                     android:paddingTop="4dp"
                     android:textAlignment="center"
                     android:textColor="#040404"
@@ -44,6 +46,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="5"
                     android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
                     android:textAlignment="center"
                     android:textColor="#424242"
                     android:textSize="15sp"
@@ -55,10 +58,11 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_weight="2"
                 android:gravity="center"
                 android:paddingBottom="6dp"
-                android:text="\u276f"
+                android:text="@string/button_next_array"
                 android:textColor="#1B5E20"
                 android:textSize="20sp" />
         </LinearLayout>
