--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#fdd706</color>
+    <color name="colorPrimaryDark">#fdd706</color>
+    <color name="colorAccent">#fdd706</color>
     <color name="yellow">#FFEB3B</color>
 </resources>
